[package]
name = "export-logseq-notes"
version = "0.3.4"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.0", features = ["serde"] }
chrono = "0.4.19"
color-eyre = { version = "0.6.2", default-features = false }
dotenv = "0.15.0"
edn-rs = "0.17.4"
eyre = "0.6.8"
handlebars = "4.3.0"
itertools = "0.10.0"
katex = "0.4.4"
nom = "7.1.0"
rayon = "1.5.0"
regex = "1.5.6"
rhai = { version = "1.10.0", features = ["sync"] }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
smallvec = "1.6.1"
smartstring = "1.0.1"
structopt = "0.3.21"
syntect = "5.0.0"
toml = "0.5.8"
urlocator = "0.1.4"
uuid = { version= "1.1.1", features = ["serde"] }
zip = "0.6.2"

[dev-dependencies]
indoc = "1.0.6"

[profile.release]
debug = 1
