[package]
name = "export-logseq-notes"
version = "0.3.8"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.0", features = ["serde"] }
blake3 = "1.3.1"
chrono = "0.4.19"
color-eyre = { version = "0.6.2", default-features = false }
dirs = "4.0.0"
dotenv = "0.15.0"
edn-rs = "0.17.4"
eyre = "0.6.8"
handlebars = "4.3.0"
itertools = "0.10.0"
katex = "0.4.4"
nom = "7.1.0"
ouroboros = "0.15.5"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.21.0", features = ["bundled"] }
rayon = "1.5.0"
regex = "1.5.6"
reqwest = { version = "0.11.13", features = ["json", "serde_json", "blocking"] }
rhai = { version = "1.10.0", features = ["sync"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
rusqlite_migration = "1.0.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
smallvec = "1.6.1"
smartstring = "1.0.1"
structopt = "0.3.21"
syntect = "5.0.0"
toml = "0.5.8"
urlencoding = "2.1.2"
urlocator = "0.1.4"
uuid = { version= "1.1.1", features = ["serde"] }
zip = "0.6.2"

[dev-dependencies]
indoc = "1.0.6"

[profile.release]
debug = 1
