[package]
name = "export-logseq-notes"
version = "0.4.2"
authors = ["Daniel Imfeld <daniel@imfeld.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.3", features = ["serde"] }
blake3 = "1.3.3"
chrono = "0.4.24"
color-eyre = { version = "0.6.2", default-features = false }
dirs = "=4.0.0"
dotenv = "0.15.0"
edn-rs = "=0.17.4"
eyre = "0.6.8"
handlebars = "4.3.6"
itertools = "0.10.5"
katex = "0.4.6"
nom = "7.1.3"
once_cell = "1.17.1"
ouroboros = "0.15.6"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.21.0", features = ["bundled"] }
rayon = "1.7.0"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json", "serde_json", "blocking"] }
rhai = { version = "1.13.0", features = ["sync"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
rusqlite_migration = "1.0.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
smallvec = "1.10.0"
smartstring = "1.0.1"
structopt = "0.3.26"
syntect = "5.1.0"
tempfile = "3.4.0"
toml = "0.5.11"
two-face = "0.2.0"
urlencoding = "2.1.2"
urlocator = "0.1.4"
uuid = { version= "1.3.0", features = ["serde"] }
zip = "0.6.4"

[dev-dependencies]
indoc = "1.0.9"

[profile.release]
debug = 1
